--- a/NightWeb-Core/pom.xml
+++ b/NightWeb-Core/pom.xml
@@ -1,16 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>NightWeb</artifactId>
-    <groupId>dev.teamnight</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>NightWeb</artifactId>
+		<groupId>dev.teamnight</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
-  <groupId>dev.teamnight</groupId>
-  <artifactId>NightWeb-Core</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<artifactId>NightWeb-Core</artifactId>
+	<packaging>jar</packaging>
 
-  <name>NightWeb-Core</name>
+	<name>NightWeb-Core</name>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${dependencies.dir}</outputDirectory>
+							<includeScope>compile</includeScope>
+							<excludeArtifactIds>javax.persistence-api,jaxb-impl</excludeArtifactIds>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-additional-modules</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${dependencies.dir}</outputDirectory>
+							<artifactItems>
+								<artifactItem>
+									<groupId>javax.enterprise</groupId>
+									<artifactId>cdi-api</artifactId>
+									<version>2.0</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>net.bytebuddy</groupId>
+									<artifactId>byte-buddy</artifactId>
+									<version>1.10.7</version>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.moditect</groupId>
+				<artifactId>moditect-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>add-module-info</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>add-module-info</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${dependencies.dir}</outputDirectory>
+							<overwriteExistingFiles>true</overwriteExistingFiles>
+							<modules>
+								<module>
+									<artifact>
+										<groupId>org.hibernate.javax.persistence</groupId>
+										<artifactId>hibernate-jpa-2.1-api</artifactId>
+										<version>1.0.0.Final</version>
+									</artifact>
+									<moduleInfo>
+										<name>java.persistence</name>
+										<exports>*;</exports>
+										<uses>javax.persistence.spi.PersistenceProvider</uses>
+									</moduleInfo>
+								</module>
+							</modules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>dev.teamnight.nightweb.core.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.basedir}/target/classes</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.basedir}/src/main/resources</directory>
+									<filtering>false</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
