--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
   		<artifactId>javax.persistence-api</artifactId>
   		<version>2.2</version>
   	</dependency>
+  	<dependency>
+	  <groupId>org.freemarker</groupId>
+	  <artifactId>freemarker</artifactId>
+	  <version>2.3.30</version>
+	</dependency>
   </dependencies>
 
   <build>
