--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
   		<artifactId>commons-validator</artifactId>
   		<version>1.6</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+  		<artifactId>owasp-java-html-sanitizer</artifactId>
+  		<version>20191001.1</version>
+  	</dependency>
   </dependencies>
 
   <build>
@@ -139,7 +144,6 @@
   </build>
   <modules>
     <module>NightWeb-Core</module>
-	<module>BBCodeParser</module>
 	<module>NightWeb-Forum</module>
   </modules>
 </project>
