--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
   		<artifactId>owasp-java-html-sanitizer</artifactId>
   		<version>20191001.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.8.1</version>
+  	</dependency>
   </dependencies>
 
   <build>
