--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,10 @@
     		<artifactId>moditect-maven-plugin</artifactId>
     		<version>1.0.0.Beta2</version>
         </plugin>
+        <plugin>
+        	<artifactId>maven-javadoc-plugin</artifactId>
+        	<version>3.2.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
